--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
-*,
-::after,
-::before{
-    margin: 0;
-}
 .container {
-    display: flex;
-   
-    height: 100vh;
+  max-width: 1480px;
+  display: flex;
+  height: 100vh;
+  margin: 0 auto;
 }
 
 .aside__section {
-    flex-basis: 280px;
+  margin: 1rem;
+  flex-basis: 280px;
   padding: 1rem;
+  border: 1px solid #F7F7F7;
+  border-radius: 8px;
+  padding: 20px 27px;
+  padding-bottom: 0px;
+  margin-bottom: 40px;
 }
 
 .main__section {
-    flex: 1;
+  flex: 0 100%;
   padding: 1rem;
 }
